@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,32 +21,21 @@
  * questions.
  */
 
-package gc;
-
-/* @test TestAllocateHeapAt.java
- * @summary Test to check allocation of Java Heap with AllocateHeapAt option
- * @requires vm.gc != "Z" & os.family != "aix"
- * @library /test/lib
- * @modules java.base/jdk.internal.misc
- * @run driver gc.TestAllocateHeapAt
+/*
+ * @test
+ * @bug 8308245
+ * @summary Test trivial handling of -proc:full option
+ * @compile -proc:full TestProcOption.java
+ * @run main TestProcOption
  */
 
-import jdk.test.lib.process.ProcessTools;
-import jdk.test.lib.process.OutputAnalyzer;
+/*
+ * The test verifies that compilation takes place when -proc:full is used.
+ */
+public class TestProcOption {
+    private TestProcOption(){};
 
-public class TestAllocateHeapAt {
-  public static void main(String args[]) throws Exception {
-    ProcessBuilder pb = ProcessTools.createTestJvm(
-        "-XX:AllocateHeapAt=" + System.getProperty("test.dir", "."),
-        "-Xlog:gc+heap=info",
-        "-Xmx32m",
-        "-Xms32m",
-        "-version");
-    OutputAnalyzer output = new OutputAnalyzer(pb.start());
-
-    System.out.println("Output:\n" + output.getOutput());
-
-    output.shouldContain("Successfully allocated Java heap at location");
-    output.shouldHaveExitValue(0);
-  }
+    public static void main(String... args) {
+        ; // do nothing
+    }
 }
